--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,12 @@
 # MySQL database connection
-host: db
-port: 3306
-database: fivem
-user: root
-password: password
-charset: utf8mb4
+connection:
+  host: db
+  port: 3306
+  database: fivem
+  user: root
+  password: password
+  charset: utf8mb4
+  logging: false
+
+migrations:
+  automatic: true
