--- a/SDK/Core/Core.csproj
+++ b/SDK/Core/Core.csproj
@@ -45,6 +45,7 @@
       <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diagnostics\LogLevel.cs" />
@@ -53,6 +54,10 @@
     <Compile Include="Helpers\Guid.cs" />
     <Compile Include="Exceptions\ModelException.cs" />
     <Compile Include="Controllers\IControllerConfiguration.cs" />
+    <Compile Include="Models\IdentityModel.cs" />
+    <Compile Include="Models\Player\Session.cs" />
+    <Compile Include="Models\Player\User.cs" />
+    <Compile Include="Models\Position.cs" />
     <Compile Include="PluginAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rpc\RpcEvents.cs" />
