Ported char create/delete/load to Roleplay plugin

--- a/Plugins/roleplay/Core/Core.csproj
+++ b/Plugins/roleplay/Core/Core.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\Player\Skills\Skill.cs" />
     <Compile Include="Models\Player\Skills\SkillType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rpc\RpcEvents.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\SDK\Core\Core.csproj">
