--- a/SDK/Client/Client.csproj
+++ b/SDK/Client/Client.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ClientPluginAttribute.cs" />
     <Compile Include="Configuration\ClientConfiguration.cs" />
     <Compile Include="Events\ITickManager.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\PlayerExtensions.cs" />
     <Compile Include="Extensions\PositionExtensions.cs" />
     <Compile Include="Interface\INuiManager.cs" />
@@ -74,7 +75,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{1ed39a02-e017-407d-8d32-fee8a1e29264}</Project>
-      <Name>IgiCore.SDK.Core</Name>
+      <Name>Core</Name>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
