--- a/Plugins/banking/Client/Client.csproj
+++ b/Plugins/banking/Client/Client.csproj
@@ -50,22 +50,22 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\SDK\Client\Client.csproj">
       <Project>{f6aa79c1-4e08-4a75-a0b4-ffd2b33d89d7}</Project>
-      <Name>IgiCore.SDK.Client</Name>
+      <Name>Client</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\..\SDK\Core\Core.csproj">
       <Project>{1ed39a02-e017-407d-8d32-fee8a1e29264}</Project>
-      <Name>IgiCore.SDK.Core</Name>
+      <Name>Core</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{7621784d-d512-42d4-93bf-fa1c856ebcbb}</Project>
-      <Name>Banking.Core</Name>
+      <Name>Core</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\roleplay\Core\Core.csproj">
       <Project>{ebbaf8a2-40ff-435d-9549-a31e166d13ec}</Project>
-      <Name>Roleplay.Core</Name>
+      <Name>Core</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
