--- a/Plugins/roleplay-vehicles/Client/Roleplay.Vehicles.Client.csproj
+++ b/Plugins/roleplay-vehicles/Client/Roleplay.Vehicles.Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EBBAF8A2-40FF-435D-9549-A31E166D13EC}</ProjectGuid>
+    <ProjectGuid>{CB83982A-9366-42FF-B8EE-4D079A8257D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Roleplay.Core</RootNamespace>
-    <AssemblyName>Roleplay.Core.net</AssemblyName>
+    <RootNamespace>Roleplay.Vehicles.Client</RootNamespace>
+    <AssemblyName>Roleplay.Vehicles.Client.net</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,40 +37,41 @@
     </AllowedReferenceRelatedFileExtensions>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CitizenFX.Client">
+      <HintPath>..\..\..\lib\CitizenFX.Client.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="JetBrains.Annotations, Version=11.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\JetBrains.Annotations.11.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Appearance\Component.cs" />
-    <Compile Include="Models\Appearance\ComponentTypes.cs" />
-    <Compile Include="Models\Appearance\Prop.cs" />
-    <Compile Include="Models\Appearance\PropTypes.cs" />
-    <Compile Include="Models\Appearance\Style.cs" />
-    <Compile Include="Models\Audio\RadioStation.cs" />
-    <Compile Include="Models\Groups\Group.cs" />
-    <Compile Include="Models\Groups\GroupMember.cs" />
-    <Compile Include="Models\Groups\GroupRole.cs" />
-    <Compile Include="Models\Player\Character.cs" />
-    <Compile Include="Models\Player\Skills\MentalSkillType.cs" />
-    <Compile Include="Models\Player\Skills\PhysicalSkillType.cs" />
-    <Compile Include="Models\Player\Skills\Skill.cs" />
-    <Compile Include="Models\Player\Skills\SkillType.cs" />
+    <Compile Include="Extensions\VehicleExtensions.cs" />
+    <Compile Include="VehicleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rpc\RpcEvents.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SDK\Core\Core.csproj">
-      <Project>{1ED39A02-E017-407D-8D32-FEE8A1E29264}</Project>
-      <Name>IgiCore.SDK.Core</Name>
+    <ProjectReference Include="..\..\..\SDK\Client\Client.csproj">
+      <Project>{f6aa79c1-4e08-4a75-a0b4-ffd2b33d89d7}</Project>
+      <Name>Client</Name>
       <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\SDK\Core\Core.csproj">
+      <Project>{1ed39a02-e017-407d-8d32-fee8a1e29264}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Roleplay.Vehicles.Core.csproj">
+      <Project>{dc2e9feb-ae4b-4bd5-985c-fb1249ef0afd}</Project>
+      <Name>Roleplay.Vehicles.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
