--- a/SDK/Core/Core.csproj
+++ b/SDK/Core/Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Controllers\IControllerConfiguration.cs" />
     <Compile Include="Models\Audio\RadioStation.cs" />
     <Compile Include="Models\Color.cs" />
+    <Compile Include="Models\DeltaUpdate.cs" />
     <Compile Include="Models\IdentityModel.cs" />
     <Compile Include="Models\Player\Session.cs" />
     <Compile Include="Models\Player\User.cs" />
